Fix for WAVE. Add more descriptive Alt for logo. Fix contrast issues.

--- a/styles/stylessheet.css
+++ b/styles/stylessheet.css
@@ -401,14 +401,14 @@ h1 {
   object-fit: contain;
 }
 
-.index_text-overlay h2 {
+.index_text-overlay h1 {
   font-size: clamp(2rem, 5vw, 3rem); /* Responsive font size: minimum, preferred 5% of viewport, Max */
-  color: white;
+  color: #436B64; /*This Colour was chosen to creat a more accessible contrast*/
   text-shadow: 3px 2px 4px rgba(115, 164, 152, 0.7);
   margin: 0.5em 0;
 }
 
-.index_text-overlay p {
+.index_text-overlay h2 {
   font-size: 2rem;
   font-weight: bold;
   color: var(--crimson_red);
